sec: address PR review — sanitize exception, replace deprecated newInstance, trim property
- AppointmentSearchManagerImpl: log rejected class with LogSanitizer.sanitize()
  and throw generic SecurityException without raw class name (CWE-209)
- AppointmentSearchManagerImpl: replace deprecated Class#newInstance() with
  getDeclaredConstructor().newInstance(); widen throws to ReflectiveOperationException
- SecurityTokenManager: trim property value before startsWith validation

Agent-Logs-Url: https://github.com/carlos-emr/carlos/sessions/698d3089-743a-4531-9693-e55caa59dac7

Co-authored-by: yingbull <8680161+yingbull@users.noreply.github.com>